@@ -18,9 +18,11 @@ class FastBoyerMooreTest extends UnitTest {
     void testSimpleScan() {
         try {
             final FastBoyerMoore scanner = new FastBoyerMoore(this.keywords);
-            final byte[] data =
-                    ("Hi, this is a one-two-cinco test of the emergency alpha five gamma\nbroadcasting system. \n\n"
-                            + "If this were a real emergency epsilon (delta) alpha you would four dos tres get the heck out of here.").getBytes();
+            final byte[] data = """
+                    Hi, this is a one-two-cinco test of the emergency alpha five gamma
+                    broadcasting system.\s
+
+                    If this were a real emergency epsilon (delta) alpha you would four dos tres get the heck out of here.""".getBytes();
 
             int pos = 0;
             final List<int[]> result = new ArrayList<>();
@@ -28,9 +30,9 @@ class FastBoyerMooreTest extends UnitTest {
                 pos = scanner.staticSingleScan(data, pos, data.length, result);
             }
             assertEquals(12, result.size(), "All results must be found and reported out");
-            assertEquals(14, result.get(0)[0], "First result check pos");
-            assertEquals(0, result.get(0)[1], "First result check id");
-            assertEquals(3, result.get(0)[2], "First result check length");
+            assertEquals(14, result.getFirst()[0], "First result check pos");
+            assertEquals(0, result.getFirst()[1], "First result check id");
+            assertEquals(3, result.getFirst()[2], "First result check length");
         } catch (Exception ex) {
             fail("Creation of scanner failure", ex);
         }
